--- a/css/style.css
+++ b/css/style.css
@@ -109,11 +109,12 @@ a {
      width: 100%;
      vertical-align: bottom;
      height: auto;
+     margin-top: 50px;
 }
 .main_copy {
     background-color: rgba(255,255,255,0.7);
     position: absolute;
-    top: 50%;
+    margin-top: 43px;
     left: 0;
     padding: 23px 35px 23px 99px;
 
@@ -134,7 +135,7 @@ a {
     max-width: 1080px;
     margin: 0 auto;
     position: relative;
-    padding: 50px 0 60px;
+    padding: 60px 0 60px;
 }
 .br-sp {
     display: none;
@@ -144,7 +145,7 @@ a {
     font-size: 30px;
     font-weight: 700;
     color: #0D96A0;
-    padding-bottom: 15px;
+    padding-bottom: 20px;
 }
 .message p {
     text-align: center;
@@ -159,7 +160,7 @@ a {
     bottom: 33px;
 }
 #tsuyomi {
-    padding: 60px 100px 10px;
+    padding: 65px 100px 18px;
     background-color: rgba(13,150,160,0.102);
     width: 100%;
 }
@@ -208,7 +209,7 @@ a {
     display: block;
     width: 50%;
     margin-left: 47px;
-    margin-top: 45px; 
+    margin-top: 48px; 
     text-align: left; 
 }
 .tsuyomi-text-area2 h4 {
@@ -226,8 +227,7 @@ a {
 .tsuyomi-text-area3 {
     display: block;
     width: 50%;
-
-    margin-top: 40px; 
+    margin-top: 48px; 
     text-align: left; 
 }
 .tsuyomi-text-area3 h4 {
@@ -245,19 +245,19 @@ a {
 }
 .tsuyomi-img-area {
     max-width: 440px;
-    margin-bottom: 50px;
+    margin-bottom: 45px;
 }
 .tsuyomi-img-area img {
     width: 100%;
 }
 #service {
-    padding: 60px 100px 59px;
+    padding: 62px 100px 59px;
     width: 100%;
 }
 .service-with-images {
     display: flex;
     gap: 16px;
-    margin-bottom: 50px;
+    margin-bottom: 48px;
     align-items: center;
     justify-content: center;
 }
@@ -300,7 +300,7 @@ a {
 }
 .service-content img {
     width: 100%;
-    margin-bottom: 10px;
+    margin-bottom: 12px;
 }
 #news {
     padding: 63px 100px 67px;
@@ -360,13 +360,13 @@ a {
     font-size: 17px;  
 }
 #access {
-    padding: 63px 100px 70px;
+    padding: 63px 100px 20px;
     max-width: 100%;
 }
 .access-with-images {
     display: flex;
     gap: 16px;
-    margin-bottom: 48px;
+    margin-bottom: 46px;
     align-items: center;
     justify-content: center;
 }
@@ -426,7 +426,7 @@ a {
     font-size: 18px;
     font-weight: 500;
     margin-bottom: 10px;
-    margin-top: 20px;
+    margin-top: 18px;
 }
 .number {
     font-size: 25px;
@@ -444,8 +444,9 @@ a {
 .time, .holiday {
     font-size: 18px;
     font-weight: 500;
-    margin-top: 17px;
-    margin-bottom: 17px ;
+    margin-top: 20px;
+    margin-bottom: 20px ;
+    letter-spacing: 0.03em;
 }
 #contact {
     padding: 62px 100px 80px;
@@ -518,7 +519,7 @@ textarea {
 
 }
 .contact_button {
-  margin-top: 58px;
+  margin-top: 48px;
   margin-inline: auto;
   width: 200px;
   display: flex;
@@ -622,8 +623,11 @@ input[type="submit"]:hover {
     font-size: 16px;
     max-width: 100%;
   }
+  .container {
+    padding: 0 20px;
+  }
   .title {
-    margin-left: -5px;
+    margin-left: 0;
   }
   .header-title{
     font-size: 20px;
@@ -638,43 +642,43 @@ input[type="submit"]:hover {
     text-align: center;
   }
   .main img {
-    width: 100%; 
+    width: 100%;
   }
   .main_copy {
-        position: absolute;
-        padding: 18px 23px 14px 20px;
-        bottom: 0; 
-        transform: translateY(21%);
-    }
-    .main_copy p {
-        font-size: 18px;
-        margin-bottom: 7px;
+    width: 84%;
+    top:69.5%;
+    position: absolute;
+    padding: 18px 23px 10px 20px;
+    bottom: 0; 
+    transform: translateY(-36%);
+  }
+  .main_copy p {
+    font-size: 20px;
+    margin-bottom: 7px;
+  }
+        .main_copy h1 {
+            font-size: 29.5px;
         
-    }
-    .main_copy h1 {
-        font-size: 27px;
-        line-height: 1.34;
-    }
-    .br-sp {
-        display: inline;
-    }
-    .br-sp::after {
-        content: "\A"; 
-        white-space: pre;
+        }
+        .br-sp {
+            display: inline;
+        }
+        .br-sp::after {
+            content: "\A"; 
+            white-space: pre;
     }
     .message {
-        position: relative;
-        padding: 30px 0 40px;
-    }
-    .container {
-        padding: 0 20px;
+        padding: 50px 0 40px;
     }
     .message h2 {
         font-size: 25px;
     }
     .message p {
         font-size: 16px;
+        font-weight: 500;
         text-align: left;
+        line-height: 1.8;
+    
     }
     .message img {
         position: absolute;
@@ -684,58 +688,83 @@ input[type="submit"]:hover {
         height: auto;
     }
     #tsuyomi {
-        padding: 40px 20px 10px;  
+        padding: 50px 20px 0;  
+    }
+    .tsuyomi-with-images {
+        margin-bottom: 40px;
     }
     .tsuyomi-item {
         display: flex;
         flex-direction: column;
         text-align: center;
-        margin-bottom: 40px;
+        margin-bottom: 35px;
     }
     .tsuyomi-img-area {
         order: 1;
         width: 100%;
-        margin-bottom: 5px;
+        margin-bottom: 23px;
     }
     .tsuyomi-text-area,
     .tsuyomi-text-area2,
     .tsuyomi-text-area3 {
         order: 2;
         width: 100%;
-        margin: 20px 0;
-        margin-bottom: 8px;
+        margin: 0 0 10px;
+        
     }
     .tsuyomi-text-area h4 {
         font-size: 20px;
+        margin-bottom: 10px;
     }
     .tsuyomi-text-area p {
         font-size: 16px;
         white-space: wrap;
+        line-height: 1.8;
     }
     .tsuyomi-text-area2 h4 {
+        margin-left: 10px;
         font-size: 20px;
+        margin-bottom: 10px;
     }
     .tsuyomi-text-area2 p {
         font-size: 16px;
         white-space: wrap;
-        width: 100%;
+        line-height: 1.8;   
     }
     .tsuyomi-text-area3 h4 {
+        margin-left: 10px;
         font-size: 20px;
+        margin-bottom: 10px;
     }
     .tsuyomi-text-area3 p {
         font-size: 16px;
         white-space: wrap;
-        width: 100%;
+        line-height: 1.8;
+        margin-bottom: 30px;
+ 
+    }
+    .br-sp {
+        display: inline;
     }
     #service {
-        padding: 45px 20px 39px;
+        padding: 8px 20px 10px;
+    }
+    .service-with-images {
+        margin-bottom: 40px;
     }
     .service-list {
         display: block;
+        flex-direction: column;
+        gap: 20px;
+    }
+    .service-content {
+        width: 100%;
     }
     .service-content img {
-        margin-bottom: 30px;
+        margin-bottom: 25px;
+        width: 100%;
+        height: auto;
+        object-fit: cover;
     }
     .service-content p {
         margin-bottom: 7px;
@@ -749,14 +778,18 @@ input[type="submit"]:hover {
         display: inline;
     }
     #news {
-        padding: 43px 20px 50px;
+        padding: 40px 20px 45px;
     }   
+    .news-with-images{
+        margin-bottom: 40px;
+    }
     .news-item {
         display: block;
         text-align: left;
         font-size: 16px;
-        padding-top: 28px;
-        padding-bottom: 28px;
+        padding-top: 25px;
+        padding-bottom: 25px;
+
     }
     .news-date {
         margin-left: 8px;
