--- a/css/style.css
+++ b/css/style.css
@@ -66,22 +66,22 @@ a {
     margin-left: 69px;
 }
 .nav_content {
-  margin-left: auto;
-  display: flex;
-  align-items: center;
-  height: 100%;
+    margin-left: auto;
+    display: flex;
+    align-items: center;
+    height: 100%;
 }
 .header_nav {
-  display: flex;
-  align-items: center;
-  height: 100%;
+    display: flex;
+    align-items: center;
+    height: 100%;
 }
 .header_nav li {
-  list-style-type: none;
-  color: #505050;
-  height: 100%; /* ← 各liも高さを揃える */
-  display: flex;
-  align-items: center;
+    list-style-type: none;
+    color: #505050;
+    height: 100%; /* ← 各liも高さを揃える */
+    display: flex;
+    align-items: center;
 }
 .nav_list {
     display: flex;
@@ -93,11 +93,11 @@ a {
     margin-right: 30px;
 }
 .header_nav li:not(:first-of-type) {
-  margin-left: 10px;
+    margin-left: 10px;
 }
 .nav_btn:hover,
 .header-title:hover {
-  color: #c08c5c; /* ホバー時に色が変わる */
+    color: #c08c5c; /* ホバー時に色が変わる */
 }
 .main {
     width: 100%;  
@@ -106,10 +106,10 @@ a {
     position: relative;
 }
 .main img {
-     width: 100%;
-     vertical-align: bottom;
-     height: auto;
-     margin-top: 50px;
+    width: 100%;
+    vertical-align: bottom;
+    height: auto;
+    margin-top: 50px;
 }
 .main_copy {
     background-color: rgba(255,255,255,0.7);
@@ -117,7 +117,6 @@ a {
     margin-top: 43px;
     left: 0;
     padding: 23px 35px 23px 99px;
-
 }
 .main_copy p {
     font-size: 25px;
@@ -186,7 +185,7 @@ a {
     justify-content: flex-start;
 }
 .tsuyomi-item.reverse {
-  flex-direction: row-reverse;
+    flex-direction: row-reverse;
 }
 .tsuyomi-text-area {
     display: block;
@@ -218,11 +217,11 @@ a {
     margin-bottom: 21px;
 }
 .tsuyomi-text-area2 p {
-  font-size: 18px;
-  text-align: left;
-  font-weight: 500;
-  width: 105%;
-  line-height: 33px;
+    font-size: 18px;
+    text-align: left;
+    font-weight: 500;
+    width: 105%;
+    line-height: 33px;
 }
 .tsuyomi-text-area3 {
     display: block;
@@ -236,12 +235,12 @@ a {
     margin-bottom: 19px;
 }
 .tsuyomi-text-area3 p {
-  font-size: 18px;
-  text-align: left;
-  font-weight: 500;
-  max-width: 395.5px;
-  width: 100%;
-  line-height: 33px;
+    font-size: 18px;
+    text-align: left;
+    font-weight: 500;
+    max-width: 395.5px;
+    width: 100%;
+    line-height: 33px;
 }
 .tsuyomi-img-area {
     max-width: 440px;
@@ -350,7 +349,6 @@ a {
     text-decoration: none;
     margin-left: 40px;
     font-size: 20px;
-    
 }
 .news-text,
 .news-text2 {
@@ -387,14 +385,12 @@ a {
     display: flex;
     width: 100%;
     max-width: 880px;
-    margin: 0 auto;
-    
+    margin: 0 auto;   
 }
 .access-img-area {
     width: 53%;
     position: relative;
     margin-bottom: 50px;
- 
 }
 .access-img-area iframe {
     width: 100%;
@@ -416,7 +412,6 @@ a {
     margin-right: 13px;
     font-size: 18px;
     font-weight: 500;
-    
 }
 .address  {
     font-size: 18px;
@@ -453,14 +448,12 @@ a {
     padding: 62px 100px 80px;
     background-color: rgba(13,150,160,0.102);
     width: 100%;
-
 }
 .contact-with-images {
     display: flex;
     gap: 16px;
     align-items: center;
     justify-content: center;
-    
 }
 .contact-with-images h3 {
     margin: 0;
@@ -501,50 +494,47 @@ a {
 }
 input[type="text"],
 input[type="email"] {
-  border: 1px solid #FFFFFF;
-  height: 40px;
-  width: 100%;
-  max-width: 711px;
-  padding: 10px 15px;
-  font-size: 16px;
-  border-radius: 4px;
-  margin-inline: auto;
-  margin-bottom: 30px;
-  outline: none;
+    border: 1px solid #FFFFFF;
+    height: 40px;
+    width: 100%;
+    max-width: 711px;
+    padding: 10px 15px;
+    font-size: 16px;
+    border-radius: 4px;
+    margin-inline: auto;
+    margin-bottom: 30px;
+    outline: none;
 }
 textarea {
-  width: 100%;
-  max-width: 711px;
-  height: 300px;
-  resize: none;
-  border: none;
-  outline: none;
-
+    width: 100%;
+    max-width: 711px;
+    height: 300px;
+    resize: none;
+    border: none;
+    outline: none;
 }
 .contact_button {
-  margin-top: 48px;
-  margin-inline: auto;
-  width: 200px;
-  display: flex;
-  justify-content: center;
+    margin-top: 48px;
+    margin-inline: auto;
+    width: 200px;
+    display: flex;
+    justify-content: center;
 }
-
 input[type="submit"] {
-  width: 100%;
-  height: 50px;
-  background-color: #0D96A0;
-  color: #fff;
-  border: 1px solid #0D96A0;
-  font-size: 25px;
-  cursor: pointer;
-  transition: .4s;
-  padding: 0;
-  border-radius: 0.7rem;
+    width: 100%;
+    height: 50px;
+    background-color: #0D96A0;
+    color: #fff;
+    border: 1px solid #0D96A0;
+    font-size: 25px;
+    cursor: pointer;
+    transition: .4s;
+    padding: 0;
+    border-radius: 0.7rem;
 }
-
 input[type="submit"]:hover {
-  color: #000;
-  background-color: #fff;
+    color: #000;
+    background-color: #fff;
 }
 .footer {
     background-color: #505050;
@@ -569,7 +559,6 @@ input[type="submit"]:hover {
 }
 .footer-nav_list {
     list-style: none;
- 
 }
 .footer-nav_link {
     color: #ffffff;
@@ -584,7 +573,6 @@ input[type="submit"]:hover {
 }
 .footer_copyright .rogo {
     margin-right: 1em;
-
 }
 .footer_sns {
     display: flex;
@@ -607,68 +595,65 @@ input[type="submit"]:hover {
      height: 18px;
 }
 @media screen and (min-width:767px) {
-  .pc_none{
-    display: none!important;
-  }
-  .massage {
-     padding: 50px 60px 60px;
-  }
-  .main_copy {
-    top:50%;
-    transform: translateY(-120%);
-  }
+    .pc_none{
+        display: none!important;
+    }
+    .massage {
+        padding: 50px 60px 60px;
+    }
+    .main_copy {
+        top:50%;
+        transform: translateY(-120%);
+    }
 }
 @media screen and (max-width:768px) {
-  .sp_none{
-    display: none!important;
-  }
-  #container {
-    font-size: 16px;
-    max-width: 100%;
-  }
-  .container {
-    padding: 0 20px;
-  }
-  .title {
-    margin-left: 0;
-  }
-  .header-title{
-    font-size: 20px;
-
-  }
-  .nav_content {
-    display: none;
-  }
-  #main {
-    width: 100%;
-    position: relative;
-    text-align: center;
-  }
-  .main img {
-    width: 100%;
-  }
-  .main_copy {
-    width: 84%;
-    top:69.5%;
-    position: absolute;
-    padding: 18px 23px 10px 20px;
-    bottom: 0; 
-    transform: translateY(-36%);
-  }
-  .main_copy p {
-    font-size: 20px;
-    margin-bottom: 7px;
-  }
-        .main_copy h1 {
-            font-size: 29.5px;
-        
-        }
-        .br-sp {
-            display: inline;
-        }
-        .br-sp::after {
-            content: "\A"; 
-            white-space: pre;
+    .sp_none{
+        display: none!important;
+    }
+    #container {
+        font-size: 16px;
+        max-width: 100%;
+    }
+    .container {
+        padding: 0 20px;
+    }
+    .title {
+        margin-left: 0;
+    }
+    .header-title{
+        font-size: 20px;
+    }
+    .nav_content {
+        display: none;
+    }
+    #main {
+        width: 100%;
+        position: relative;
+        text-align: center;
+    }
+    .main img {
+        width: 100%;
+    }
+    .main_copy {
+        width: 83%;
+        top: 22.3%;
+        transform: translateY(50%);
+        padding: 12px 16px;
+        bottom: auto;  /* ← 不要なので上書きで解除 */
+    }
+    .main_copy p {
+        font-size: 20px;
+        margin-bottom: 7px;
+    }
+    .main_copy h1 {
+        font-size: 29.5px;
+    }
+    .br-sp {
+        display: inline;
+    }
+    .br-sp::after {
+        content: "\A"; 
+        white-space: pre;
     }
     .message {
         padding: 50px 0 40px;
@@ -681,7 +666,6 @@ input[type="submit"]:hover {
         font-weight: 500;
         text-align: left;
         line-height: 1.8;
-    
     }
     .message img {
         position: absolute;
@@ -694,7 +678,7 @@ input[type="submit"]:hover {
         padding: 50px 20px 0;  
     }
     .tsuyomi-with-images {
-        margin-bottom: 40px;
+        margin-bottom: 41px;
     }
     .tsuyomi-item {
         display: flex;
@@ -706,6 +690,13 @@ input[type="submit"]:hover {
         order: 1;
         width: 100%;
         margin-bottom: 23px;
+        display: block;
+        justify-content: center;
+        text-align: center;
+    }
+    .tsuyomi-img-area img {
+        display: block;
+        margin: 0 auto;
     }
     .tsuyomi-text-area,
     .tsuyomi-text-area2,
@@ -713,11 +704,10 @@ input[type="submit"]:hover {
         order: 2;
         width: 100%;
         margin: 0 0 10px;
-        
     }
     .tsuyomi-text-area h4 {
         font-size: 20px;
-        margin-bottom: 10px;
+        margin-bottom: 18px;
     }
     .tsuyomi-text-area p {
         font-size: 16px;
@@ -744,7 +734,6 @@ input[type="submit"]:hover {
         white-space: wrap;
         line-height: 1.8;
         margin-bottom: 30px;
- 
     }
     .br-sp {
         display: inline;
@@ -753,7 +742,7 @@ input[type="submit"]:hover {
         padding: 8px 20px 10px;
     }
     .service-with-images {
-        margin-bottom: 40px;
+        margin-bottom: 45px;
     }
     .service-list {
         display: block;
@@ -809,7 +798,6 @@ input[type="submit"]:hover {
         margin-top: 5px;
         white-space: nowrap;
         font-size: 16px;
-
     }
     #access {
         padding: 43px 20px 37px;
@@ -823,7 +811,6 @@ input[type="submit"]:hover {
         box-sizing: border-box;
         white-space: normal;
     }
-    
     .access-img-area {
         width: 100%;
         max-width: 100%;
@@ -899,44 +886,55 @@ input[type="submit"]:hover {
     }
 }
 .access-text-area {
-  font-family: "Noto Sans JP", sans-serif;
+    font-family: "Noto Sans JP", sans-serif;
 }
-
 .access-text-area p {
-  font-size: 16px;
-  line-height: 1.6;
-  margin: 5px 0 8px 0;
-  letter-spacing: 0;
+    font-size: 16px;
+    line-height: 1.6;
+    margin: 5px 0 8px 0;
+    letter-spacing: 0;
 }
 .access-text-area .address,
 .access-text-area .post {
     font-size: 16px;
 }
 .access-text-area .number {
-  font-size: 25px;
-  line-height: 1.6;
+    font-size: 25px;
+    line-height: 1.6;
 }
-
 .access-text-area hr {
-  margin: 12px 0;
-  border: none;
-  border-top: 1px solid #ccc;
+    margin: 12px 0;
+    border: none;
+    border-top: 1px solid #ccc;
 }
-
 .access-text-area h5.clinic-name {
-  font-size: 22px;
-  margin: 0 0 13px 0;
+    font-size: 22px;
+    margin: 0 0 13px 0;
 }
-
 .access-with-images img {
-  width: 24px;
-  height: 24px;
-  vertical-align: middle;
+    width: 24px;
+    height: 24px;
+    vertical-align: middle;
 }
-
 .access-with-images h3 {
-  font-size: 24px;
-  display: inline-block;
-  margin: 0 10px;
-  vertical-align: middle;
+    font-size: 24px;
+    display: inline-block;
+    margin: 0 10px;
+    vertical-align: middle;
+}
+@media screen and (max-width: 320px){
+    .main_copy {
+    width: 90%;
+    top: 13%;
+    transform: translateY(50%);
+    padding: 12px 16px;
+    bottom: auto;  /* ← 不要なので上書きで解除 */
+  }
+  .main_copy p {
+    font-size: 20px;
+    margin-bottom: 7px;
+  }
+  .main_copy h1 {
+    font-size: 29.5px;
+  }
 }
