--- a/css/style.css
+++ b/css/style.css
@@ -79,7 +79,7 @@ a {
 .header_nav li {
     list-style-type: none;
     color: #505050;
-    height: 100%; /* ← 各liも高さを揃える */
+    height: 100%; 
     display: flex;
     align-items: center;
 }
@@ -97,7 +97,7 @@ a {
 }
 .nav_btn:hover,
 .header-title:hover {
-    color: #c08c5c; /* ホバー時に色が変わる */
+    color: #c08c5c; 
 }
 .main {
     width: 100%;  
@@ -158,83 +158,83 @@ a {
     right:  80px;
     bottom: 33px;
 }
-#tsuyomi {
+#strengths {
     padding: 65px 100px 18px;
     background-color: rgba(13,150,160,0.102);
     width: 100%;
 }
-.tsuyomi-with-images {
+.strengths-with-images {
     display: flex;
     gap: 20px;
     margin-bottom: 48px;
     align-items: center;
     justify-content: center;
 }
-.tsuyomi-icon {
+.strengths-icon {
     width: 25.49px;
 }    
-.tsuyomi-with-images h3 {
+.strengths-with-images h3 {
     margin: 0;
     font-size: 25px;
     font-weight: 700;
 }
-.tsuyomi-item {
+.strengths-item {
     display: flex;
     max-width: 880px;
     margin: 0 auto;
     justify-content: flex-start;
 }
-.tsuyomi-item.reverse {
+.strengths-item.reverse {
     flex-direction: row-reverse;
 }
-.tsuyomi-text-area {
+.strengths-text-area {
     display: block;
     width: 50%;
     margin-right: 45px;
     margin-top: 48px;  
 }
-.tsuyomi-text-area h4 {
+.strengths-text-area h4 {
     font-weight: 700; 
     font-size: 22px;
     margin-bottom: 19px;
 }
-.tsuyomi-text-area p {
+.strengths-text-area p {
     font-size: 18px;
     text-align: left;
     font-weight: 500;
     line-height: 33px;
 }
-.tsuyomi-text-area2 {
+.strengths-text-area2 {
     display: block;
     width: 50%;
     margin-left: 47px;
     margin-top: 48px; 
     text-align: left; 
 }
-.tsuyomi-text-area2 h4 {
+.strengths-text-area2 h4 {
     font-weight: 700; 
     font-size: 22px;
     margin-bottom: 21px;
 }
-.tsuyomi-text-area2 p {
+.strengths-text-area2 p {
     font-size: 18px;
     text-align: left;
     font-weight: 500;
     width: 105%;
     line-height: 33px;
 }
-.tsuyomi-text-area3 {
+.strengths-text-area3 {
     display: block;
     width: 50%;
     margin-top: 48px; 
     text-align: left; 
 }
-.tsuyomi-text-area3 h4 {
+.strengths-text-area3 h4 {
     font-weight: 700; 
     font-size: 22px;
     margin-bottom: 19px;
 }
-.tsuyomi-text-area3 p {
+.strengths-text-area3 p {
     font-size: 18px;
     text-align: left;
     font-weight: 500;
@@ -242,11 +242,11 @@ a {
     width: 100%;
     line-height: 33px;
 }
-.tsuyomi-img-area {
+.strengths-img-area {
     max-width: 440px;
     margin-bottom: 45px;
 }
-.tsuyomi-img-area img {
+.strengths-img-area img {
     width: 100%;
 }
 #service {
@@ -271,7 +271,6 @@ a {
     display: flex;
     max-width: 880px;
     margin: 0 auto;
-  
 }
 .service-content {
     width: 100%;
@@ -543,8 +542,8 @@ input[type="submit"]:hover {
     width: 100%;
 }
 .inner {
-  display: flex;
-  flex-direction: column;  
+    display: flex;
+    flex-direction: column;  
 }
 .footer_content {
     margin-inline: auto;
@@ -591,8 +590,8 @@ input[type="submit"]:hover {
     display: flex;
 }
 .footer_sns img {
-     width: 22px;
-     height: 18px;
+    width: 22px;
+    height: 18px;
 }
 @media screen and (min-width:767px) {
     .pc_none{
@@ -639,7 +638,7 @@ input[type="submit"]:hover {
         top: 22.3%;
         transform: translateY(50%);
         padding: 12px 16px;
-        bottom: auto;  /* ← 不要なので上書きで解除 */
+        bottom: auto;  
     }
     .main_copy p {
         font-size: 20px;
@@ -872,10 +871,10 @@ input[type="submit"]:hover {
         margin-top: 20px;
     }
     .footer-nav_lists {
-        flex-wrap: wrap; /* 折り返しOKにする */
-        justify-content: center; /* 中央揃え */
-        row-gap: 10px; /* 縦の余白 */
-        padding: 16px 13px; /* スマホ時は左右パディング狭く */
+        flex-wrap: wrap; 
+        justify-content: center; 
+        row-gap: 10px;
+        padding: 16px 13px; 
     }
     .footer-nav_list a {
         font-size: 18px;
@@ -928,7 +927,7 @@ input[type="submit"]:hover {
     top: 13%;
     transform: translateY(50%);
     padding: 12px 16px;
-    bottom: auto;  /* ← 不要なので上書きで解除 */
+    bottom: auto;  
   }
   .main_copy p {
     font-size: 20px;
